--- a/public/stylesheets/style_index.css
+++ b/public/stylesheets/style_index.css
@@ -8,7 +8,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url('./image/background-index.png');
+    background: url('/public/images/index/background-index.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
