Create Backward Button, Update Home & Order

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <button class="btn" type="button" onclick="linkto_index()"> 
-        Click here to Order!
+    <button class="btn" type="button" onclick="linkto_order()"> 
+        START
     </button>
 </body>
 
