--- a/public/stylesheets/style_order.css
+++ b/public/stylesheets/style_order.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: "Roboto Condensed", sans-serif;
+    position: fixed;
     width: 100%;
     height: 100vh;
     background: #AB937A;
@@ -26,7 +27,7 @@ body {
 }
 
 table {
-    margin-top: 4%;
+    margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
     color: #372417;
@@ -60,13 +61,15 @@ select {
     color: white;
     outline: none;
     box-shadow: 0 0 20px rgba(20, 20, 30, 0.25);
+    transition: .1s linear;
 }
 select option {
+    padding-left: 3%;
     background-color: #573924;
     letter-spacing: 100px;
 }
 select:hover {
-    padding: 7px 12px;
+    padding: 7px 20px;
     border: 5px solid black;
 }
 .selected {
@@ -92,7 +95,7 @@ img {
     padding-right: 1.5%;
 }
 
-.object {
+.object4 {
     display: flex;
     align-items: center;
     justify-content: center;
