Fix img order page

--- a/views/order/order.ejs
+++ b/views/order/order.ejs
@@ -80,11 +80,11 @@
             <tr>
                 <td colspan="2">
                     <div class="image">
-                        <img src="./image/img_index/stick.jpg" id="image1" width="600" height="400">
-                        <img src="./image/img_index/wide.jpg" id="image2" width="600" height="400" hidden="overflow">
-                        <img src="./image/img_index/glass.jpg" id="image3" width="600" height="400" hidden="overflow">
-                        <img src="./image/img_index/narrow.jpg" id="image4" width="600" height="400" hidden="overflow">
-                        <img src="./image/img_index/instant.jpg" id="image5" width="600" height="400" hidden="overflow">
+                        <img src="./images/order/stick.jpg" id="image1" width="600" height="400">
+                        <img src="./images/order/wide.jpg" id="image2" width="600" height="400" hidden="overflow">
+                        <img src="./images/order/glass.jpg" id="image3" width="600" height="400" hidden="overflow">
+                        <img src="./images/order/narrow.jpg" id="image4" width="600" height="400" hidden="overflow">
+                        <img src="./images/order/instant.jpg" id="image5" width="600" height="400" hidden="overflow">
                     </div>
                     <div class="select">
                         <select id="noodles" onchange="showImgNoodles()" width="90%">
