--- a/views/order/order.ejs
+++ b/views/order/order.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Order Here</title>
-    <link rel="stylesheet" href="stylesheets/style_order.css">
+    <link rel="stylesheet" href="style_order.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -103,13 +103,11 @@
                         <img src="./images/order/shrimp.jpg" id="image7" width="600px" height="400px" hidden="overflow">
                     </div>
                     <div class="select">
-                        <div class="select">
-                            <select id="meat" onchange="showImgMeat()" width="90%">
-                                <option value="none" selected class="selected">Choose Meats</option>
-                                <option value="Pork">Pork</option>
-                                <option value="Shrimp">Shrimp</option>
-                            </select>
-                        </div>
+                        <select id="meat" onchange="showImgMeat()" width="90%">
+                            <option value="none" selected class="selected">Choose Meats</option>
+                            <option value="Pork">Pork</option>
+                            <option value="Shrimp">Shrimp</option>
+                        </select>
                     </div>
                 </td>
             </tr>
@@ -125,35 +123,35 @@
                             <p>Chinese chive</p>
                             <input type="checkbox" id="veg2" name="veg[]" value="Chinese chive"/>
                             <label for="veg2">
-                                <img src="./images/order/veg2.jpg" width="600px" height="250px">
+                                <img src="./images/order/veg2.jpg"/ width="600px" height="250px">
                             </label>
                         </div>
                     </div>
                 </td>
                 <td>
-                    <div class="object">
+                    <div class="object4">
                         <div class="content2">
                             <p>Roasted nuts</p>
                             <input type="checkbox" id="top1" name="top[]" value="Roasted nuts"/>
                             <label for="top1">
-                                <img src="./images/order/top1.jpg" width="292.5px" height="220px">
+                                <img src="./images/order/top1.jpg"/ width="292.5px" height="220px">
                             </label>
                             <p>Dried Salted Prawn</p>
                             <input type="checkbox" id="top2" name="top[]" value="Dried Salted Prawn"/>
                             <label for="top2">
-                                <img src="./images/order/top2.jpg" width="292.5px" height="220px">
+                                <img src="./images/order/top2.jpg"/ width="292.5px" height="220px">
                             </label>
                         </div>
                         <div class="content2">
                             <p>Crackling</p>
                             <input type="checkbox" id="top3" name="top[]" value="Crackling"/>
                             <label for="top3">
-                                <img src="./images/order/top3.jpg" width="292.5px" height="220px">
+                                <img src="./images/order/top3.jpg"/ width="292.5px" height="220px">
                             </label>
                             <p>Bean curd</p>
                             <input type="checkbox" id="top4" name="top[]" value="Bean curd"/>
                             <label for="top4">
-                                <img src="./images/order/top4.jpg" width="292.5px" height="220px">
+                                <img src="./images/order/top4.jpg"/ width="292.5px" height="220px">
                             </label>
                         </div>
                     </div>
