Create add-to-cart button , Create cart button (Link to showData already)

--- a/views/order/order.ejs
+++ b/views/order/order.ejs
@@ -76,6 +76,8 @@
 <body>
     <div class="container">
         <button class="back" onclick="Backward()"><i class='bx bxs-chevron-left' ></i></button>
+        <img class="cart" src="./images/order/cart.png" onclick="addtoCart()" width="100" height="100">
+        <button class="add-to-cart">Add to Cart</button>
         <table>
             <tr>
                 <td colspan="2">
