--- a/public/stylesheets/style_order.css
+++ b/public/stylesheets/style_order.css
@@ -25,6 +25,26 @@ body {
     margin-left: 2%;
 }
 
+.cart {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    right: 2%;
+}
+
+.add-to-cart {
+    position: absolute;
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    background: green;
+    width: 10%;
+    height: 50px;
+    font-size: 15px;
+    right: 1%;
+    bottom: 0%;
+    font-style: bold;
+    font-weight: 800;
+}
+
 table {
     margin-top: 2%;
     margin-left: auto;
