--- a/public/stylesheets/style_order.css
+++ b/public/stylesheets/style_order.css
@@ -6,9 +6,10 @@
 
 body {
     font-family: "Roboto Condensed", sans-serif;
+    position: fixed;
     width: 100%;
     height: 100vh;
-    background: #AB937A;
+    background: url('./images/order/background-order.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -29,30 +30,56 @@ body {
     position: absolute;
     margin: 0;
     padding: 0;
-    right: 2%;
+    right: 3%;
+}
+.cart i {
+    color: white;
+    font-size: 80px;
+    filter: drop-shadow(0px 0px 5px #222);
+}
+.cart:hover {
+    cursor: pointer;
 }
 
 .add-to-cart {
     position: absolute;
+    right: 2%;
+    bottom: 3%;
+    width: 11%;
+    height: 80px;
+    background: #0F601E;
+    border: none;
+    outline: none;
+    border-radius: 80px;
     box-shadow: 0 0 10px rgba(0,0,0,.1);
-    background: green;
-    width: 10%;
-    height: 50px;
-    font-size: 15px;
-    right: 1%;
-    bottom: 0%;
+    cursor: 16px;
+    color: white;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 30px;
     font-style: bold;
     font-weight: 800;
+    border: 2px solid white;
+}
+.add-to-cart:hover {
+    cursor: pointer;
+    border: none;
+    box-shadow: 0 0 2px #4D9941,
+    0 0 10px #4D9941,
+    0 0 25px #0F601E,
+    0 0 50px #0F601E;
+}
+.add-to-cart i {
+    font-size: 28px;
 }
 
 table {
     margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
-    color: #372417;
+    color: white;
     font-size: 35px;
     font-weight: 500;
-    width: 90%;
+    width: 85%;
 }   
 
 td {
@@ -95,7 +122,7 @@ select:hover {
     display: none;
 }
 
-img {
+table img {
     box-shadow: 2px 3px 25px rgba(0, 0, 0, 0.5);
     border-radius: 5%;
 }
