--- a/views/order/order.ejs
+++ b/views/order/order.ejs
@@ -76,8 +76,10 @@
 <body>
     <div class="container">
         <button class="back" onclick="Backward()"><i class='bx bxs-chevron-left' ></i></button>
-        <img class="cart" src="./images/order/cart.png" onclick="addtoCart()" width="100" height="100">
-        <button class="add-to-cart">Add to Cart</button>
+        <div class="cart">
+            <i class='bx bxs-cart' onclick="addtoCart()"></i>
+        </div>
+        <button class="add-to-cart"><i class='bx bx-plus-circle' ></i>  Add to Cart</button>
         <table>
             <tr>
                 <td colspan="2">
