--- a/public/stylesheets/style_order.css
+++ b/public/stylesheets/style_order.css
@@ -9,7 +9,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: url('./images/order/background-order.png');
+    background: url('../images/order/background-order.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
