--- a/views/order/order.ejs
+++ b/views/order/order.ejs
@@ -72,9 +72,20 @@
                 document.getElementById("image7").style.display='none'
             }
         }
+        function checkDropdown(){
+            var selected = document.getElementById("noodles");
+            var selected2 = document.getElementById("meat");
+
+            var nn = document.getElementById("n1");
+            var nn2 = document.getElementById("n2");
+
+            nn.value = selected.value;
+            nn2.value = selected2.value;
+        }
     </script>
 </head>
 <body>
+    <form method="post">
     <div class="container">
         <button class="back" onclick="Backward()"><i class='bx bxs-chevron-left' ></i></button>
         <div class="lang">
@@ -85,7 +96,7 @@
             <i class="fa-solid fa-cart-shopping" onclick="addtoCart()"></i>
             <p><br>Your Cart</p>
         </div>
-        <button class="add-to-cart"><i class='bx bx-plus-circle' ></i>  Add to Cart</button>
+        <button class="add-to-cart" onclick="checkDropdown()" type="submit"><i class='bx bx-plus-circle' ></i>  Add to Cart</button>
         <table>
             <tr>
                 <td colspan="2">
@@ -97,13 +108,14 @@
                         <img src="./images/order/instant.jpg" id="image5" width="600" height="400" hidden="overflow">
                     </div>
                     <div class="select">
+                        <input type="hidden" id="n1" name="noodlesEN" value="">
                         <select id="noodles" onchange="showImgNoodles()" width="90%">
-                            <option value="none" selected class="selected">Choose Noodles</option>
-                            <option value="Rice Stick Noodles">Rice Stick Noodles</option>
-                            <option value="Wide Rice Noodles">Wide Rice Noodles</option>
-                            <option value="Glass Noodles">Glass Noodles</option>
-                            <option value="Narrow rice noodles">Narrow rice noodles</option>
-                            <option value="Instant Noodles">Instant Noodles</option>
+                            <label for="n0"><option value="none" selected class="selected">Choose Noodles</option></label>
+                            <label for="n1"><option value="Rice Stick Noodles">Rice Stick Noodles</option></label>
+                            <label for="n2"><option value="Wide Rice Noodles">Wide Rice Noodles</option></label>
+                            <label for="n3"><option value="Glass Noodles">Glass Noodles</option></label>
+                            <label for="n4"><option value="Narrow rice noodles">Narrow rice noodles</option></label>
+                            <label for="n5"><option value="Instant Noodles">Instant Noodles</option></label>
                         </select>
                     </div>
                 </td>
@@ -113,10 +125,11 @@
                         <img src="./images/order/shrimp.jpg" id="image7" width="600px" height="400px" hidden="overflow">
                     </div>
                     <div class="select">
+                        <input type="hidden" id="n2" name="meatEN" value="">
                         <select id="meat" onchange="showImgMeat()" width="90%">
-                            <option value="none" selected class="selected">Choose Meats</option>
-                            <option value="Pork">Pork</option>
-                            <option value="Shrimp">Shrimp</option>
+                            <label for="n0"><option value="none" selected class="selected">Choose Meats</option></label>
+                            <label for="n2"><option value="Pork">Pork</option></label>
+                            <label for="n3"><option value="Shrimp">Shrimp</option></label>
                         </select>
                     </div>
                 </td>
@@ -126,12 +139,12 @@
                     <div class="object4">
                         <div class="content">
                             <p>Bean sprout</p>
-                            <input type="checkbox" id="veg1" name="veg[]" value="Bean sprout"/>
+                            <input type="checkbox" id="veg1" name="vegEN" value="Bean sprout"/>
                             <label for="veg1">
                                 <img src="./images/order/veg1.jpg" width="600px" height="250px"/>
                             </label>
                             <p>Chinese chive</p>
-                            <input type="checkbox" id="veg2" name="veg[]" value="Chinese chive"/>
+                            <input type="checkbox" id="veg2" name="vegEN" value="Chinese chive"/>
                             <label for="veg2">
                                 <img src="./images/order/veg2.jpg"/ width="600px" height="250px">
                             </label>
@@ -142,24 +155,24 @@
                     <div class="object4">
                         <div class="content2">
                             <p>Roasted nuts</p>
-                            <input type="checkbox" id="top1" name="top[]" value="Roasted nuts"/>
+                            <input type="checkbox" id="top1" name="topEN" value="Roasted nuts"/>
                             <label for="top1">
                                 <img src="./images/order/top1.jpg"/ width="292.5px" height="220px">
                             </label>
                             <p>Dried Salted Prawn</p>
-                            <input type="checkbox" id="top2" name="top[]" value="Dried Salted Prawn"/>
+                            <input type="checkbox" id="top2" name="topEN" value="Dried Salted Prawn"/>
                             <label for="top2">
                                 <img src="./images/order/top2.jpg"/ width="292.5px" height="220px">
                             </label>
                         </div>
                         <div class="content2">
                             <p>Crackling</p>
-                            <input type="checkbox" id="top3" name="top[]" value="Crackling"/>
+                            <input type="checkbox" id="top3" name="topEN" value="Crackling"/>
                             <label for="top3">
                                 <img src="./images/order/top3.jpg"/ width="292.5px" height="220px">
                             </label>
                             <p>Bean curd</p>
-                            <input type="checkbox" id="top4" name="top[]" value="Bean curd"/>
+                            <input type="checkbox" id="top4" name="topEN" value="Bean curd"/>
                             <label for="top4">
                                 <img src="./images/order/top4.jpg"/ width="292.5px" height="220px">
                             </label>
@@ -169,5 +182,6 @@
             </tr>
         </table>
     </div>
+    </form>
 </body>
 </html>
